# go-duckdb

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  CRITICAL.md  DYNAMIC-LIBRARY.md  LICENSE  Makefile  README.md  ROADMAP.md  SIMD-ROADMAP.md  TODO-DUCKDB-121.md  aggregation_test.go  appender.go  appender_tx.go  appender_tx_test.go  basic_rows.go  batch_extraction_test.go  batch_param_binding.go  batch_param_binding_test.go  batch_query.go  batch_query_test.go  bench_test.go  benchmark_memory_usage_test.go  benchmark_results.md  benchmark_zero_copy_test.go  blob_test.go  buffer_pool.go  column_vector_pool.go  columnar_result.go  columnar_result_test.go  compatibility_test.go  concurrent_query_test.go  connection.go  count_test.go  direct_result.go  doc.go  duckdb.go  duckdb_go_adapter.c  duckdb_go_adapter.h  (+40 more)
example/: complex.go  main.go  minimal.go  minimal121.go  native_info.go  prepared.go
example/example/: version_check.go
examples/lowlevelapi/: lowlevel_api_example.go
examples/standartsql/: standard_sql_example.go
include/: README.md  duckdb.h  duckdb_native.h
lib/: README.md
lib/darwin/amd64/: README.md
lib/darwin/arm64/: README.md  libduckdb_native.dylib  libduckdbnative.dylib  libduckdbnative_shim.dylib
lib/linux/amd64/: README.md
lib/linux/arm64/: README.md
lib/windows/amd64/: README.md
lib/windows/arm64/: README.md
mmap/: mmap_adapter.c  mmap_adapter.h
native/: Makefile  native_shim.c
src/: CMakeLists.txt  Makefile  build.sh  duckdb_native.c
